--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+html {
+    scroll-behavior: smooth;
+  }
+      body {
+          margin: 0;
+          padding: 0;
+          background-color: #000;
+          color: #fff;
+          font-family: sans-serif;
+          font-size: 16px;
+          line-height: 1.5;
+      }
 #container {
     width: 100%;
     height: 100%;
