--- a/style.css
+++ b/style.css
@@ -95,3 +95,27 @@ html {
 
 
 }
+.text-block {
+    position: absolute;
+    top: 20px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.444);
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+ .text-block2 {
+    position: absolute;
+    top: 20px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.444);
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+p{
+    text-align: center;
+    font-size: 40px;
+    font-family: "Roboto", sans-serif;
+}
